added p1 and boston marathon img

--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home </a>
+                        <a class="nav-link" href="#">About </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <!--Main body-->
+
     <div class="container">
         <div class="row">
             <div class="col-sm-6 main-box">
@@ -45,7 +46,13 @@
                     but toulou does. Toulou is a momas boy for sure!! I adopted them when they were 12 weeks old. They
                     have a flower water foutain because noir likes to play with his water! He thinks his a fish but his
                     noot!! Silly cat!</p>
-                <p1></p1>
+                <p1>
+                    I really like cats and dogs but just currently have cats. Id like to adopt a goldendoodle one day.
+                    other then really likeing animals i also really enjoy running. I am currently training for the
+                    Boston Marathon!! My first marathon ever! Super excited and can't wait to cross the finish line.
+                </p1>
+                <img class="boston-pic" src="assets/imgs/Bostonmarathonlogo.jpg" alt="boston marathon logo" />
+
 
             </div>
         </div>
