--- a/index.html
+++ b/index.html
@@ -52,10 +52,19 @@
                     Boston Marathon!! My first marathon ever! Super excited and can't wait to cross the finish line.
                 </p1>
                 <img class="boston-pic" src="assets/imgs/Bostonmarathonlogo.jpg" alt="boston marathon logo" />
-
-
             </div>
         </div>
+
+        <!--Footer-->
+        <footer class="footer">
+            <hr>
+            <p>
+                &copy; Copy Right.
+            </p>
+        </footer>
+
+
+
 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
             integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
