--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!--Footer-->
         <footer class="footer">
             <hr>
-            <p>
+            <p class="text-center">
                 &copy; Copy Right.
             </p>
         </footer>
