created portofolio html

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,18 @@
             </div>
         </div>
     </nav>
+    <!--Main Body-->
+    <div class="background">
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 main-box">
+                <h1>Portfolio</h1>
+                <hr>
 
+
+            </div>
+        </div>
 </body>
 
 </html>
