--- a/contact.html
+++ b/contact.html
@@ -39,19 +39,34 @@
     <div class="container content">
         <div class="row">
             <div class="col-sm-6 main-box">
-                <h1>About Me</h1>
+                <h1>Contact</h1>
                 <hr>
-                <img class="profile-pic" src="./assets/imgs/20180807_102606.jpg" alt="two black kitties" />
-                <p>These are my two kitties. Noir & Toulous. They love to play fetch!! Noir does not like me very much
-                    but toulou does. Toulou is a momas boy for sure!! I adopted them when they were 12 weeks old. They
-                    have a flower water foutain because noir likes to play with his water! He thinks his a fish but his
-                    noot!! Silly cat!</p>
-                <p1>
-                    I really like cats and dogs but just currently have cats. Id like to adopt a goldendoodle one day.
-                    other then really likeing animals i also really enjoy running. I am currently training for the
-                    Boston Marathon!! My first marathon ever! Super excited and can't wait to cross the finish line.
-                </p1>
-                <img class="boston-pic" src="assets/imgs/Bostonmarathonlogo.jpg" alt="boston marathon logo" />
+                <form>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Enter Name">
+
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Email address</label>
+
+                        <input type="email" class="form-control" id="exampleFormControlInput1"
+                            placeholder="name@example.com">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea class="form-control" id="message" rows="3"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <button type="button" class="btn btn-info">Submit</button>
+                    </div>
+
+
+                </form>
+
+
             </div>
         </div>
     </div>
@@ -61,7 +76,6 @@
         <p class="text-center">
             &copy; Copy Right.
         </p>
-
     </footer>
 
 
