added social media link and pic icon

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
                     Boston Marathon!! My first marathon ever! Super excited and can't wait to cross the finish line.
                 </p1>
                 <img class="boston-pic" src="assets/imgs/Bostonmarathonlogo.jpg" alt="boston marathon logo" />
+                <a href="https://www.linkedin.com/in/diana-zsigray-b10a81123">
+                    <img class="icon" alt="linedin icon" src="assets/imgs/LinkedIn.png" />
+                </a>
+
+                <a href="https://github.com/diana603">
+                    <img class="icon" alt="github icon" src="assets/imgs/GitHub-Mark.png" />
+                </a>
+
+
             </div>
         </div>
     </div>
