--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <!--header-->
+    <!--Nav Bar-->
+
     <nav class="navbar navbar-expand-lg mb-5">
         <div class="container">
             <a class="my-brand" href="#">Diana Zsigray</a>
@@ -34,6 +35,7 @@
             </div>
         </div>
     </nav>
+
     <!--Main body-->
 
     <div class="container content">
@@ -64,7 +66,9 @@
             </div>
         </div>
     </div>
+
     <!--Footer-->
+
     <footer class="footer">
         <hr>
         <p class="text-center">
