added text overlay

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 
     <footer class="footer">
         <hr>
-        <p class="text-center">
+        <p class="text-center copyRight">
             &copy; Copy Right.
         </p>
     </footer>
