--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                     but toulou does. Toulou is a momas boy for sure!! I adopted them when they were 12 weeks old. They
                     have a flower water foutain because noir likes to play with his water! He thinks his a fish but his
                     noot!! Silly cat!</p>
-                <p1>
+                <p>
                     I really like cats and dogs but just currently have cats. Id like to adopt a goldendoodle one day.
                     other then really likeing animals i also really enjoy running. I am currently training for the
                     Boston Marathon!! My first marathon ever! Super excited and can't wait to cross the finish line.
-                </p1>
+                </p>
                 <img class="boston-pic" src="assets/imgs/Bostonmarathonlogo.jpg" alt="boston marathon logo" />
                 <a href="https://www.linkedin.com/in/diana-zsigray-b10a81123">
                     <img class="icon" alt="linedin icon" src="assets/imgs/LinkedIn.png" />
@@ -71,7 +71,7 @@
 
     <footer class="footer">
         <hr>
-        <p class="text-center">
+        <p class="text-center copyRight">
             &copy; Copy Right.
         </p>
 
