--- a/portfolio.html
+++ b/portfolio.html
@@ -38,38 +38,42 @@
 
     <!--Main Body-->
 
-    <div class="background">
-    </div>
+
     <div class="container">
         <div class="row">
             <div class="col-md-6 main-box">
                 <h1>Portfolio</h1>
                 <hr>
                 <div class="row">
+
                     <div class="col-md-6 col-sm-12">
                         <div class="text-overlay">Diana</div>
-                        <img class="img-fluid" src="assets/imgs/wonderwomen.jpg" alt="SuperHero">
+                        <img class="img-fluid marvel-pic" src="assets/imgs/wonderwomen.jpg" alt="SuperHero">
                     </div>
+
                     <div class="col-md-6 col-sm-12">
                         <div class="text-overlay">Captain Marvel</div>
-                        <img class="img-fluid" src="assets/imgs/captainamerica.jpg"
+                        <img class="img-fluid marvel-pic" src="assets/imgs/captainamerica.jpg"
                             alt="Captian America flying with fire">
                     </div>
                 </div>
                 <div class="row">
+
                     <div class="col-md-6 col-sm-12">
                         <div class="text-overlay">Okoye</div>
-                        <img class="img-fluid" src="assets/imgs/Okoye.jpg" alt="Warrior with spear">
+                        <img class="img-fluid marvel-pic" src="assets/imgs/Okoye.jpg" alt="Warrior with spear">
                     </div>
+
                     <div class="col-md-6 col-sm-12">
                         <div class="text-overlay">Black Widow</div>
-                        <img class="img-fluid" src="assets/imgs/blackwidow.jpg" alt="blackwidow fighting pose">
+                        <img class="img-fluid marvel-pic" src="assets/imgs/blackwidow.jpg"
+                            alt="blackwidow fighting pose">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
                         <div class="text-overlay">Valkyrie</div>
-                        <img class="img-fluid" src="assets/imgs/Valkyrie.jpg" alt="Warrior with sword">
+                        <img class="img-fluid marvel-pic" src="assets/imgs/Valkyrie.jpg" alt="Warrior with sword">
                     </div>
 
 
@@ -80,14 +84,15 @@
 
             </div>
         </div>
-        <!--footer-->
-        <footer class="footer">
-            <hr>
-            <p class="text-center">
-                &copy; Copy Right.
-            </p>
+    </div>
+    <!--footer-->
+    <footer class="footer">
+        <hr>
+        <p class="text-center copyRight">
+            &copy; Copy Right.
+        </p>
 
-        </footer>
+    </footer>
 </body>
 
 </html>
