--- a/index.html
+++ b/index.html
@@ -45,15 +45,16 @@
                 <hr>
                 <img class="profile-pic" src="./assets/imgs/20180807_102606.jpg" alt="two black kitties" />
                 <p>These are my two kitties. Noir & Toulous. They love to play fetch!! Noir does not like me very much
-                    but toulou does. Toulou is a momas boy for sure!! I adopted them when they were 12 weeks old. They
-                    have a flower water foutain because noir likes to play with his water! He thinks his a fish but his
+                    but Toulouse does. Toulouse is a mamas boy for sure!! I adopted them when they were 12 weeks old.
+                    They
+                    have a flower water fountain because noir likes to play with his water! He thinks his a fish but his
                     noot!! Silly cat!</p>
                 <p>
                     I really like cats and dogs but just currently have cats. Id like to adopt a goldendoodle one day.
-                    other then really likeing animals i also really enjoy running. I am currently training for the
-                    Boston Marathon!! My first marathon ever! Super excited and can't wait to cross the finish line.
+                    other then really likeing animals i also really enjoy running, eating spicy food and cooking.
                 </p>
-                <img class="boston-pic" src="assets/imgs/Bostonmarathonlogo.jpg" alt="boston marathon logo" />
+                <!--Will need to add resume so the icon is then clickable and will open up actual resume-->
+                <img class="resume" src="assets/imgs/resumelogo.jpg" alt="resume logo" />
                 <a href="https://www.linkedin.com/in/diana-zsigray-b10a81123">
                     <img class="icon" alt="linedin icon" src="assets/imgs/LinkedIn.png" />
                 </a>
@@ -72,7 +73,7 @@
     <footer class="footer">
         <hr>
         <p class="text-center copyRight">
-            &copy; Copy Right.
+            &copy; Diana Zsigray.
         </p>
 
     </footer>
