--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
     <footer class="footer">
         <hr>
         <p class="text-center copyRight">
-            &copy; Copy Right.
+            &copy; Diana Zsigray.
         </p>
 
     </footer>
