--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
                     other then really likeing animals i also really enjoy running, eating spicy food and cooking.
                 </p>
                 <!--Will need to add resume so the icon is then clickable and will open up actual resume-->
-                <img class="resume" src="assets/imgs/resumelogo.jpg" alt="resume logo" />
+
+                <a href="./Resume2020.pdf" alt="resume" target="_blank"><img class="resume"
+                        src="assets/imgs/resumelogo.jpg" alt="resume logo" /></a>
+
                 <a href="https://www.linkedin.com/in/diana-zsigray-b10a81123">
                     <img class="icon" alt="linedin icon" src="assets/imgs/LinkedIn.png" />
                 </a>
